--- a/localforage-todolist/package.json
+++ b/localforage-todolist/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "less": "^3.0.4",
